resize and reposition transfer maps, avoid stop name line wrapping

--- a/app/component/itinerary.scss
+++ b/app/component/itinerary.scss
@@ -1017,7 +1017,7 @@ $font-print-decrease: 0.7;
       border-bottom: none;
     }
     .itinerary-leg-stopname {
-        max-width: 44%;
+        max-width: 90%;
       }
   }
 
@@ -1054,17 +1054,15 @@ $font-print-decrease: 0.7;
     &.walk {
       display: block;
       margin-left: auto;
-      margin-bottom: 1em;
-      height: 24em;
-      width: 24em;
-      @media print { width: 369px; height: 369px; }
+      height: 16em;
+      width: 16em;
+      @media print { width: 250px; height: 250px; }
     }
   }
 
   .transfermap-container {
     width: 100%;
     height: 100%;
-    margin-right: 3em;
     .print-itinerary-map {
       width: 100%;
       height: 100%;
